--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --o",
     "build": "ng build",
-    "deploy": "ng deploy --base-href=https://edsont8.github.io/SantanderDIOFrontend/",
+    "deploy": "ng deploy --base-href=https://edsonstudio.github.io/SantanderDIOFrontend/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
